updates to writing and others

--- a/archive.html
+++ b/archive.html
@@ -77,6 +77,13 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-8">
+          <a href="blog/world-literature-is-post-soviet-literature.html"><img class="feature" src="images/world-lit-today-sq.png" /></a>
+          <h4><a href="blog/world-literature-is-post-soviet-literature.html">World Literature is Post-Soviet Literature</a></h4>
+          <p class="blog-date">
+            24 November 2020
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-8">
           <a href="blog/conspiracies-of-competence.html"><img class="feature" src="images/lozhkin-mendeleev.jpg" /></a>
           <h4><a href="blog/conspiracies-of-competence.html">Conspiracies of Competence</a></h4>
           <p class="blog-date">
