--- a/writing.html
+++ b/writing.html
@@ -83,23 +83,68 @@
 <table>
   <tr>
     <td width="20%">
-      <em>in progress</em>
+      2024
     </td>
     <td width="80%">
       <p>
-        “Literature in Film,” short essay in <em>The New Cambridge History of Russian Literature</em>,
-        eds. Simon Franklin, Rebecca Reich, and Emma Widdis, Cambridge UP, in preparation.
+
       </p>
     </td>
   </tr>
   <tr>
     <td>
-      <em>in progress</em>
+      2024
+    </td>
+    <td>
+      <p>
+        <a href="https://stars.library.ucf.edu/jjls/vol37/iss1/27/" target="_blank">
+          “The Uncanny Coincidences of the Russian Joyce,”</a> review of <em>All Future Plunges into Past</em> by José Vergara. 
+          <em>The James Joyce Literary Supplement</em> 37, no. 1.
+      </p>
+    </td>
+  </tr><tr>
+    <td>
+      2024
     </td>
     <td>
       <p>
         “The Collective Voice,” short essay in <em>The New Cambridge History of Russian Literature</em>,
-        eds. Simon Franklin, Rebecca Reich, and Emma Widdis, Cambridge UP, in preparation.
+        eds. Simon Franklin, Rebecca Reich, and Emma Widdis, Cambridge UP.
+      </p>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      2024
+    </td>
+    <td>
+      <p>
+        <a href="https://www.the-tls.co.uk/politics-society/social-cultural-studies/russian-style-julie-a-cassiday-putin-book-review-bradley-a-gorski" target="_blank">
+          “Kremlin he-man: Vladimir Putin's camp homophobia,”</a> <em>The Times Literary Supplement</em>,
+        Feb 9, 5.
+      </p>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      2023
+    </td>
+    <td>
+      <p>
+        <a href="https://www.the-tls.co.uk/regular-features/in-brief/history-3" target="_blank">
+          “The battle to shape the memory of Soviet history,”</a> <em>The Times Literary Supplement</em>,
+        Jul 7, 5.
+      </p>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      2022
+    </td>
+    <td>
+      <p>
+        <a href="https://www.academia.edu/84326849/Reveiw_of_MEDEA_Dir_Aleksandr_Zeldovich_Kinokompaniia_11_2021_139_minutes_Color_https_www_imdb_com_title_tt15042204_" target="_blank">
+          Review of <em>Medea</em> directed by Aleksandr Zeldovich</a>. <em>Slavic Review</em> 81, no. 1.
       </p>
     </td>
   </tr>
@@ -109,8 +154,9 @@
     </td>
     <td>
       <p>
-        “Medieval Knights in Central Moscow” and “Magic and Dragons and Swords,
-        Oh My! Affect and the Medieval.” Two-part series. <em>All the Russias Blog</em>, NYU, September 3–5.
+        <a href="https://jordanrussiacenter.org/blog/medieval-knights-in-central-moscow" target="_blank">
+          “Medieval Knights in Central Moscow”</a> and <a href="https://jordanrussiacenter.org/blog/magic-and-dragons-and-swords-oh-my-affect-and-the-medieval" target="_blank">
+          “Magic and Dragons and Swords, Oh My! Affect and the Medieval.”</a> Two-part series. <em>All the Russias Blog</em>, NYU, September 3–5.
       </p>
     </td>
   </tr>
@@ -120,8 +166,9 @@
     </td>
     <td>
       <p>
-        <em>The Human Reimagined: Posthumanism in Russia</em>, eds. Colleen McQuillen and
-        Julia Vaingurt. <em>The Russian Review</em>, Vol. 78, No. 3 (Jul): 514–15.
+        <a href="https://www.academia.edu/123492597/The_Human_Reimagined_Posthumanism_in_Russia_ed_by_Colleen_McQuillen_and_Julia_Vaingurt_The_Russian_Review_Vol_78_No_3_July_2019_514_15" target="_blank">
+          <em>The Human Reimagined: Posthumanism in Russia</em>, eds. Colleen McQuillen and
+        Julia Vaingurt</a>. <em>The Russian Review</em>, Vol. 78, No. 3 (Jul): 514–15.
       </p>
     </td>
   </tr>
@@ -131,8 +178,9 @@
     </td>
     <td>
       <p>
-        <em>What Does It Mean To Be Post-Soviet: Decolonial Art from the Ruins of the Soviet Empire</em>
-         by Madina Tlostanova. <em>Slavic and East European Journal</em>, Vol. 63, No. 2 (Summer): 320–21.
+        <a href="https://www.academia.edu/123492488/What_Does_it_Mean_to_be_Post_Soviet_by_Madina_Tlostanova_Slavic_and_East_European_Journal_Vol_63_No_2_Summer_2019_320_21" target="_blank">
+          <em>What Does It Mean To Be Post-Soviet: Decolonial Art from the Ruins of the Soviet Empire</em>
+         by Madina Tlostanova</a>. <em>Slavic and East European Journal</em>, Vol. 63, No. 2 (Summer): 320–21.
       </p>
     </td>
   </tr>
@@ -142,7 +190,8 @@
     </td>
     <td>
       <p>
-        <em>The Rehearsals</em> by Vladimir Sharov, trans. Oliver Ready. <em>The Russian Review</em>, Vol. 77, No. 4 (Oct): 652–53.
+        <a href="https://www.academia.edu/37414292/Review_of_THE_REHEARSALS_by_Vladimir_Sharov_The_Russian_Review_Vol_77_No_4_2018_652_53" target="_blank">
+          <em>The Rehearsals</em> by Vladimir Sharov, trans. Oliver Ready</a>. <em>The Russian Review</em>, Vol. 77, No. 4 (Oct): 652–53.
       </p>
     </td>
   </tr>
@@ -152,18 +201,9 @@
     </td>
     <td>
       <p>
-        <em>Ludmila Ulitskaya and the Art of Tolerance</em> by Elizabeth A. Skomp and
-        Benjamin M. Sutcliffe. <em>Modern Language Review</em>, Vol. 112, Pt. 3 (Jul): 757–58.
-      </p>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      2017
-    </td>
-    <td>
-      <p>
-        Interview with Vasily Arkanov, <em>Nepriamoi efir</em>, Russia 24 (Online television station). 13 February.
+        <a href="https://www.academia.edu/33753999/Review_of_Liudmila_Ulitskaya_and_the_Art_of_Tolerance_by_Elizabeth_A_Skomp_and_Benjamin_M_Sutcliffe_Modern_Language_Review_Vol_112_Pt_3_Jul_2017_757_58" target="_blank">
+          <em>Ludmila Ulitskaya and the Art of Tolerance</em> by Elizabeth A. Skomp and
+        Benjamin M. Sutcliffe</a>. <em>Modern Language Review</em>, Vol. 112, Pt. 3 (Jul): 757–58.
       </p>
     </td>
   </tr>
@@ -173,7 +213,8 @@
     </td>
     <td>
       <p>
-        <em>The Target</em> (<em>Mishen’</em>), dir. Aleksandr Zeldovich. <em>Tolstoy Studies Journal</em>, Special Issue: “Tolstoy in the Twenty-First Century”: 137–38.
+        <a href="https://www.academia.edu/31849171/_The_Target_2011_dir_Aleksandr_Zeldovich_Tolstoy_Studies_Journal_Anna_Karenina_for_the_21st_Century_2016_138_39" target="_blank">
+          <em>The Target</em> (<em>Mishen’</em>), dir. Aleksandr Zeldovich</a>. <em>Tolstoy Studies Journal</em>, Special Issue: “Tolstoy in the Twenty-First Century”: 137–38.
       </p>
     </td>
   </tr>
@@ -183,7 +224,8 @@
     </td>
     <td>
       <p>
-        <em>The Depths of Russia: Oil, Power, and Culture after Socialism</em> by Douglas Rogers. <em>Ulbandus</em>, vol. 17: 187–89.
+        <a href="https://www.academia.edu/31848834/The_Depths_of_Russia_Oil_Power_and_Culture_After_Socialism_by_Douglas_Rogers_Ulbandus_17_2016_187_89" target="_blank">
+          <em>The Depths of Russia: Oil, Power, and Culture after Socialism</em> by Douglas Rogers</a>. <em>Ulbandus</em>, vol. 17: 187–89.
       </p>
     </td>
   </tr>
@@ -193,18 +235,19 @@
     </td>
     <td>
       <p>
-        “Totalitarian Sprawl,” review of <em>The Big Green Tent</em> by Ludmila Ulitskaya,
+        <a href="https://www.publicbooks.org/totalitarian-sprawl/" target="_blank">“Totalitarian Sprawl,”</a> review of <em>The Big Green Tent</em> by Ludmila Ulitskaya,
          trans. Polly Gannon. <em>Public Books</em>, Nov.
       </p>
     </td>
   </tr>
   <tr>
     <td>
-      2015
+      2014
     </td>
     <td>
       <p>
-        “How I Learned to Stop Worrying and Love the Trigger Warning.” <em>Columbia Spectator</em>, 8 Oct.
+        <a href="https://www.publicbooks.org/the-other-side-of-the-looking-glass/" target="_blank">“The Other Side of the Looking Glass,”</a>
+         review of <em>The Symmetry Teacher</em> by Andrei Bitov, trans. Polly Gannon. <em>Public Books</em>, Dec.
       </p>
     </td>
   </tr>
@@ -214,8 +257,8 @@
     </td>
     <td>
       <p>
-        “The Other Side of the Looking Glass,” review of <em>The Symmetry Teacher</em>
-         by Andrei Bitov, trans. Polly Gannon. <em>Public Books</em>, Dec.
+        <a href="https://www.academia.edu/7230046/Down_Among_the_Fishes_by_Natalka_Babina_World_Literature_Today_May_Aug_2014_100_101" target="_blank">
+          <em>Down Among the Fishes</em> by Natalka Babina, trans. Jim Dingley</a>. <em>World Literature Today</em>, Aug.
       </p>
     </td>
   </tr>
@@ -225,7 +268,7 @@
     </td>
     <td>
       <p>
-        <em>Down Among the Fishes</em> by Natalka Babina, trans. Jim Dingley. <em>World Literature Today</em>, Aug.
+        <a href="https://www.publicbooks.org/russia-is-no-more/" target="_blank">“Russia is No More,”</a> review of <em>Telluria</em> by Vladimir Sorokin. <em>Public Books</em>, Jun.
       </p>
     </td>
   </tr>
@@ -235,18 +278,8 @@
     </td>
     <td>
       <p>
-        “Russia is No More,” review of <em>Telluria</em> by Vladimir Sorokin. <em>Public Books</em>, Jun.
-
-      </p>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      2014
-    </td>
-    <td>
-      <p>
-        <em>Snow Germans</em> by Dmitry Vachedin, trans. Arch Tait. <em>World Literature Today</em>, Mar.
+        <a href="https://www.academia.edu/7230019/Snow_Germans_by_Dmitry_Vachedin_World_Literature_Today_Mar_Apr_2014_62" target="_blank">
+          <em>Snow Germans</em> by Dmitry Vachedin, trans. Arch Tait</a>. <em>World Literature Today</em>, Mar.
       </p>
     </td>
   </tr>
@@ -256,7 +289,8 @@
     </td>
     <td>
       <p>
-        <em>Petroleum Venus</em> by Alexander Snegirev, trans. Arch Tait. <em>World Literature Today</em>, Nov.
+        <a href="https://www.academia.edu/7229960/Petroleum_Venus_by_Alexander_Snegirev_World_Literature_Today_Nov_Dec_2013_68_69" target="_blank">
+          <em>Petroleum Venus</em> by Alexander Snegirev, trans. Arch Tait</a>. <em>World Literature Today</em>, Nov.
       </p>
     </td>
   </tr>
@@ -266,7 +300,8 @@
     </td>
     <td>
       <p>
-        <em>Read.Russia! An Anthology of New Voices</em> ed. by Elena Shubina.
+        <a href="https://www.academia.edu/7230144/Read_Russia_An_Anthology_of_New_Voices_ed_Elena_Shubina_Publishing_Research_Quarterly_29_3_Sep_2013_400_402" target="_blank">
+          <em>Read.Russia! An Anthology of New Voices</em> ed. by Elena Shubina</a>.
         <em>Publishing Research Quarterly</em>, 29.3, Sep.
       </p>
     </td>
@@ -277,8 +312,9 @@
     </td>
     <td>
       <p>
-        <em>A Displaced Person: The Later Life and Extraordinary Adventures of Private Ivan Chonkin</em>
-         by Vladimir Voinovich, trans. Andrew Bromfield. <em>World Literature Today</em>, Sep.
+        <a href="https://www.academia.edu/7230005/A_Displaced_Person_The_Later_Life_and_Extraordinary_Adventures_of_Private_Ivan_Chonkin_by_Vladimir_Voinovich_World_Literature_Today_Sep_Oct_2013_65_66" target="_blank">
+          <em>A Displaced Person: The Later Life and Extraordinary Adventures of Private Ivan Chonkin</em>
+         by Vladimir Voinovich, trans. Andrew Bromfield</a>. <em>World Literature Today</em>, Sep.
       </p>
     </td>
   </tr>
@@ -288,7 +324,8 @@
     </td>
     <td>
       <p>
-        <em>Maidenhair</em> by Mikhail Shishkin, trans. Marian Schwartz. <em>World Literature Today</em>, Mar.
+        <a href="https://www.academia.edu/123492222/Maidenhair_by_Mikhail_Shishkin_World_Literature_Today_March_April_2013_143_44" target="_blank">
+          <em>Maidenhair</em> by Mikhail Shishkin, trans. Marian Schwartz</a>. <em>World Literature Today</em>, Mar.
       </p>
     </td>
   </tr>
@@ -300,22 +337,34 @@
 
 
       <a name="latest"></a><hr />
-      <h2 align="center">World Literature is Postsocialist Literature</h2>
+      <h2 align="center">Bestsellers of Moscow, Part I</h2>
       <br />
 
-        <p>Note: <em>This is a talk I gave at the last ASEEES conference. It informs part of my book project, but
-        I also kind of like it as a stand-alone piece. I hope you enjoy.</em></p>
+      <p>
+        In the 1990s, Russia's fledgling capitalist book industry decided it desperately needed a bestseller
+        list, or at least so thought the editors of the industry newspaper <em>Knizhnoe obozrenie</em> (<em>The Book Review</em>).
+        By November 1993, that newspaper had launched the first bestseller lists in Russian literature. The lists
+        started as small notices in the bottom corner of page 2, but soon blossomed into full-page features. They
+        ran throughout the 1990s. (You can read my article on the development of these lists
+        <a href="https://www.academia.edu/65812258/_The_Bestseller_or_The_Cultural_Logic_of_Postsocialism_Slavic_Review_79_3_Fall_2020_613_635">here</a>.)
+        </p>
+        <div class="row">
+
+          <figure align="center">
+          <img class="img-proj" src="images/bestseller-spread.jpg" width="80%"></a>
+          <figcaption align="center">Bestsellers of Moscow lists for Aug 16, 1994 on the right,
+            including (from top) hardcover, softcover and “Intellectual” bestsellers.
+            The article facing is titled “The Magic of the Bestseller.”</figcaption>
+            </figure>
+            </div>
         <p>
-          World literature is postsocialist literature; or, more precisely, world
-          literature as a disciplinary paradigm is possible only in a postsocialist
-          world. The paradigm is predicated on the (imagined) frictionless exchange
-          and political homogeneity of a globe deprived of its “second world,” bereft
-          of political alternatives, and unquestionably in thrall to markets and their
-          paradigms. In this sense, world literature is how we imagine literature in
-          a specifically postsocialist world. Or, if you like, it is comparative
-          literature at the end of history.</p>
+        Over the last several years, I've collected a full set of these lists, and with the help of two Georgetown
+        research assistants, Amelia Benjamin and Nina Armstrong, created a data set based on them. The data set is
+        open source (you can download it <a href="https://github.com/bradleygorski/BestsellersofMoscow">here</a>), but I
+        wanted to present some of it here.
+      </p>
         <p>
-          <a href="blog/world-literature-is-post-soviet-literature.html">Read more...</a>
+          <a href="blog/bestsellers-of-moscow.html">Read more...</a>
         </p>
 
 
