--- a/writing.html
+++ b/writing.html
@@ -87,7 +87,9 @@
     </td>
     <td width="80%">
       <p>
-
+        <a href="https://onlinelibrary.wiley.com/doi/10.1111/russ.12689" target="_blank">
+          Review of <em>Putin's Dark Ages: Political Neomedievalism and Re-Stalinization in Russia</em> by
+          Dina Khapaeva</a>. <em>Russian Review</em> 83, no. 4.
       </p>
     </td>
   </tr>
@@ -98,7 +100,7 @@
     <td>
       <p>
         <a href="https://stars.library.ucf.edu/jjls/vol37/iss1/27/" target="_blank">
-          “The Uncanny Coincidences of the Russian Joyce,”</a> review of <em>All Future Plunges into Past</em> by José Vergara. 
+          “The Uncanny Coincidences of the Russian Joyce,”</a> review of <em>All Future Plunges into Past</em> by José Vergara.
           <em>The James Joyce Literary Supplement</em> 37, no. 1.
       </p>
     </td>
@@ -109,6 +111,17 @@
     <td>
       <p>
         “The Collective Voice,” short essay in <em>The New Cambridge History of Russian Literature</em>,
+        eds. Simon Franklin, Rebecca Reich, and Emma Widdis, Cambridge UP.
+      </p>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      2024
+    </td>
+    <td>
+      <p>
+        “Literature in Film,” short essay in <em>The New Cambridge History of Russian Literature</em>,
         eds. Simon Franklin, Rebecca Reich, and Emma Widdis, Cambridge UP.
       </p>
     </td>
