book cover update

--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
 <div class="float-left">
   <figure>
     <a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1" target="_blank">
-      <img class="img-proj" src="https://cornellpress-us.imgix.net/9781501779794.jpg?auto=format&w=298&q=20&dpr=2" align="left" height="300px" width="auto" alt=""></a>
+      <img class="img-proj" src="https://cornellpress-us.imgix.net/covers/9781501779794.jpg?auto=format&w=298&q=20&dpr=2" align="left" height="400px" width="auto" alt=""></a>
 <figcaption align="center"><em><a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1" target="_blank">Cultural Capitalism: Literature and the Market After Socialism</a></em></figcaption>
   </figure>
 </div>
