--- a/research.html
+++ b/research.html
@@ -137,8 +137,10 @@
         In 2020, in the heart of the pandemic, we hosted a series of workshops on the topic, in which leading scholars shared their
         research on leftist transnationalism in the interwar period and beyond. Those workshops became the basis for the volume that
         Phil and I edited <em><a href="https://utorontopress.com/9781487543891/red-migrations/">Red Migrations: Transnational Mobility
-        and Leftist Culture after 1917</a></em> (University of Toronto Press, 2024). You can read the introduction to the volume here
-        and my chapter on Langston Hughes, Arthur Koestler, and the poetics of Disgust here.
+        and Leftist Culture after 1917</a></em> (University of Toronto Press, 2024). You can read the introduction to the volume
+        <a href="files/GleissnerGorski-Red Migrations-Introduction(Toronto 2024).pdf" target="_parent">here</a>
+        and my chapter on Langston Hughes, Arthur Koestler, and the poetics of Disgust
+        <a href="files/Gorski-Syphilis Dirt and the Frontiers of Revolution-Ch6 Red Migrations(Toronto 2024).pdf" target="_blank">here</a>.
         </p>
 
         <hr />
