files added to writing

--- a/writing.html
+++ b/writing.html
@@ -110,7 +110,7 @@
     </td>
     <td>
       <p>
-        “The Collective Voice,” short essay in <em>The New Cambridge History of Russian Literature</em>,
+        “<a href="files/Gorski-The Collective Voice-The New Cambridge History of Russian Literature(2024)" target="_blank">The Collective Voice</a>,” short essay in <em>The New Cambridge History of Russian Literature</em>,
         eds. Simon Franklin, Rebecca Reich, and Emma Widdis, Cambridge UP.
       </p>
     </td>
@@ -121,7 +121,7 @@
     </td>
     <td>
       <p>
-        “Literature in Film,” short essay in <em>The New Cambridge History of Russian Literature</em>,
+        “<a href="files/Gorski-Literature in Film-The New Cambridge History of Russian Literature(2024).pdf" target="_blank">Literature in Film</a>,” short essay in <em>The New Cambridge History of Russian Literature</em>,
         eds. Simon Franklin, Rebecca Reich, and Emma Widdis, Cambridge UP.
       </p>
     </td>
