corrected blog archive link

--- a/writing.html
+++ b/writing.html
@@ -438,7 +438,7 @@
           <a href="writing.html">top</a>
         </h4>
         <hr />
-        <h3 align="center"><a href="blog/archive.html">Full Blog Archive</a></h3>
+        <h3 align="center"><a href="archive.html">Full Blog Archive</a></h3>
 
 
         <hr />
