corrected typo on CC page

--- a/CulturalCapitalism.html
+++ b/CulturalCapitalism.html
@@ -89,8 +89,8 @@
               these lists into a usable data set. Some of that data appears in the book. But I also wanted to present it here
               in a more dynamic form than a book publication would allow.</p>
 
-              <p>To get started, take a look at this bar chart race of the best selling authors of 1990s Russia parentheses
-              push play in the bottom left hand corner.</p>
+              <p>To get started, take a look at this bar chart race of the best selling authors of 1990s Russia
+              (push play in the bottom left corner).</p>
 
               <br />
               <h3 align="center">Bestselling Fiction Authors by Ranked Points*, Nov. 1993–Jun. 1999</h3>
