Updated language on bio and book

--- a/CulturalCapitalism.html
+++ b/CulturalCapitalism.html
@@ -122,7 +122,7 @@
                   Download the <a href="https://github.com/bradleygorski/BestsellersofMoscow">open source data set</a> of all the 1990s bestsellers published in the central Moscow bestseller lists.
                 </li>
                 <li>
-                  And of course, <a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1" target="_blank">pre-order the book</a>.
+                  And of course, <a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1" target="_blank">order the book</a>.
                 </li>
               </ul></p>
 
