--- a/archive.html
+++ b/archive.html
@@ -70,7 +70,21 @@
     <div class="content">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-8">
-          <a href="blog/bestsellers-of-moscow.html"><img class="feature" src="images/bestsellers-chart.png" /></a>
+          <a href="blog/bestsellers-of-moscow-3.html"><img class="feature" src="images/bestsellergeography.png" /></a>
+          <h4><a href="blog/bestsellers-of-moscow-3.html">Bestsellers of Moscow III: Consolidation</a></h4>
+          <p class="blog-date">
+            15 March 2025
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-8">
+          <a href="blog/bestsellers-of-moscow-2.html"><img class="feature" src="images/bestsellers-chart.png" /></a>
+          <h4><a href="blog/bestsellers-of-moscow-2.html">Bestsellers of Moscow II: Import, Imitate, Innovate</a></h4>
+          <p class="blog-date">
+            28 August 2024
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-8">
+          <a href="blog/bestsellers-of-moscow.html"><img class="feature" src="images/bestseller-spread.jpg" /></a>
           <h4><a href="blog/bestsellers-of-moscow.html">Bestsellers of Moscow</a></h4>
           <p class="blog-date">
             10 August 2024
