--- a/research.html
+++ b/research.html
@@ -214,7 +214,7 @@
           </td>
           <td>
             <em><a href="https://utorontopress.com/9781487543891/red-migrations/">
-              Red Migrations: Transnational Mobility and Leftist Culture after 1917</a></em>
+              Red Migrations: Transnational Mobility and Leftist Culture after 1917</a>, eds. Philip Tuxbury-Gleissner and Bradley A. Gorski</em>
             (University of Toronto Press, 2024).</p>
           </td>
         </tr>
