--- a/research.html
+++ b/research.html
@@ -213,7 +213,7 @@
             2024
           </td>
           <td>
-            <em><a href="https://utorontopress.com/9781487543891/red-migrations/">
+            <em><a href="https://utorontopress.com/9781487543891/red-migrations/" target="_blank">
               Red Migrations: Transnational Mobility and Leftist Culture after 1917</a>, eds. Philip Tuxbury-Gleissner and Bradley A. Gorski</em>
             (University of Toronto Press, 2024).</p>
           </td>
@@ -223,7 +223,7 @@
             2016
           </td>
           <td>
-            <em><a href="https://www.academia.edu/13753336/Ulbandus_17_A_Culture_of_Institutions_Institutions_of_Culture_2016_ed_Bradley_Gorski">
+            <em><a href="https://www.academia.edu/13753336/Ulbandus_17_A_Culture_of_Institutions_Institutions_of_Culture_2016_ed_Bradley_Gorski" target="_blank">
               A Culture of Institutions / Institutions of Culture</a></em>, ed. Bradley Gorski,
             Special Issue of <em>Ulbandus: The Slavic, East European, and Eurasian Review of Columbia University</em>,
             vol. 17.</p>
@@ -245,8 +245,10 @@
           <td width="80%">
              <p>
                “The Sociological Turn: Public Opinion Polling and the Dream of an Open Society,”
-               <em>Inventing the Post-Soviet Public Sphere: Media Culture of the Russian 1990s</em>,
-               ed. Maya Vinokour (Amherst College Press).
+               <a href="https://services.publishing.umich.edu/Books/M/Media-Cultures-of-the-Russian-1990s2" target="_blank">
+                 <em>Media Cultures of the Russian 1990s: Inventing the Post-Soviet Public Sphere</em></a>,
+               ed. Maya Vinokour (Amherst College Press, 2025). (<a href="files/Gorski-Sociological Turn-in Vinokour ed-Media Cultures of the Russian 1990s(Amherst CP 2025).pdf" target="_blank">PDF</a>)
+           </p>
              </p>
           </td>
         </tr>
@@ -257,8 +259,8 @@
           <td width="80%">
              <p>
                “‘Syphilis, Dirt, and the Frontiers of Revolution’: Revolutionary Geographies
-               at the Borders of Disgust,” <em>Red Migrations: Transnational Mobility and Leftist
-                 Culture after 1917</em>, eds. Bradley A. Gorski and Philip Gleissner (University of Toronto Press).
+               at the Borders of Disgust,” <a href="https://utorontopress.com/9781487543891/red-migrations/" target="_blank"><em>Red Migrations: Transnational Mobility and Leftist
+                 Culture after 1917</em></a>, eds. Bradley A. Gorski and Philip Gleissner (University of Toronto Press). (<a href="files/Gorski-Syphilis Dirt and the Frontiers of Revolution-Ch6 Red Migrations(Toronto 2024).pdf" target="_blank">PDF</a>)
              </p>
           </td>
         </tr>
@@ -268,8 +270,8 @@
           </td>
           <td>
             <p>
-              “The Market,” <em><a href="https://www.cambridge.org/us/universitypress/subjects/literature/european-literature/new-cambridge-history-russian-literature">The New Cambridge History of Russian Literature</a></em>, eds.
-              Simon Franklin, Rebecca Reich, and Emma Widdis (Cambridge Univeristy Press).
+              “The Market,” <em><a href="https://www.cambridge.org/us/universitypress/subjects/literature/european-literature/new-cambridge-history-russian-literature" target="_blank">The New Cambridge History of Russian Literature</a></em>, eds.
+              Simon Franklin, Rebecca Reich, and Emma Widdis (Cambridge Univeristy Press). (<a href="files/Gorski-The Market-The New Cambridge History of Russian Literature(2024).pdf" target="_blank">PDF</a>)
             </p>
           </td>
         </tr>
@@ -278,7 +280,7 @@
             2023
           </td>
           <td>
-            <p>“<a href="https://www.academia.edu/122129437/_%D0%9B%D0%B8%D1%82%D0%B5%D1%80%D0%B0%D1%82%D1%83%D1%80%D0%BD%D1%8B%D0%B9_%D0%BA%D0%B0%D0%BF%D0%B8%D1%82%D0%B0%D0%BB%D0%B8%D0%B7%D0%BC_%D0%B8_%D1%8D%D0%BA%D0%BE%D0%BD%D0%BE%D0%BC%D0%B8%D0%BA%D0%B0_%D0%BF%D1%80%D0%B5%D1%81%D1%82%D0%B8%D0%B6%D0%B0_%D0%9F%D1%80%D0%B5%D0%BC%D0%B8%D0%B8_%D0%B2_1990_%D0%B5_%D0%B8_2000_%D0%B5_%D0%B3%D0%B3_Literary_Capitalism_and_the_Economy_of_Prestige_Post_Soviet_Prizes_in_the_1990s_and_2000s_Novoe_literaturnoe_obozrenie_No_179_Jan_2023_202_218_in_Russian_">Литературный капитализм и экономика престижа. Премии в 1990-е и 2000-е гг.</a>”
+            <p>“<a href="https://www.academia.edu/122129437/_%D0%9B%D0%B8%D1%82%D0%B5%D1%80%D0%B0%D1%82%D1%83%D1%80%D0%BD%D1%8B%D0%B9_%D0%BA%D0%B0%D0%BF%D0%B8%D1%82%D0%B0%D0%BB%D0%B8%D0%B7%D0%BC_%D0%B8_%D1%8D%D0%BA%D0%BE%D0%BD%D0%BE%D0%BC%D0%B8%D0%BA%D0%B0_%D0%BF%D1%80%D0%B5%D1%81%D1%82%D0%B8%D0%B6%D0%B0_%D0%9F%D1%80%D0%B5%D0%BC%D0%B8%D0%B8_%D0%B2_1990_%D0%B5_%D0%B8_2000_%D0%B5_%D0%B3%D0%B3_Literary_Capitalism_and_the_Economy_of_Prestige_Post_Soviet_Prizes_in_the_1990s_and_2000s_Novoe_literaturnoe_obozrenie_No_179_Jan_2023_202_218_in_Russian_" target="_blank">Литературный капитализм и экономика престижа. Премии в 1990-е и 2000-е гг.</a>”
               [“Literary Capitalism and the Economy of Prestige. Post-Soviet Prizes in the 1990s and 2000s”]
               <em>Novoe literaturnoe obozrenie</em>, No. 179 (Jan 2023): 202–218.</p>
           </td>
@@ -288,7 +290,7 @@
             2021
           </td>
           <td>
-            <p>“<a href="https://www.academia.edu/65812252/_Socialist_Realism_Inside_Out_Boris_Akunin_and_Mass_Literature_for_the_Elite_in_The_Akunin_Project_eds_Elena_V_Baraban_and_Stephen_M_Norris_University_of_Toronto_Press_2021_255_281">
+            <p>“<a href="https://www.academia.edu/65812252/_Socialist_Realism_Inside_Out_Boris_Akunin_and_Mass_Literature_for_the_Elite_in_The_Akunin_Project_eds_Elena_V_Baraban_and_Stephen_M_Norris_University_of_Toronto_Press_2021_255_281" target="_blank">
               Socialist Realism Inside-Out: Boris Akunin and Mass Literature for the Elites</a>,”
             <em>The Akunin Project: The Mysteries and Histories of Russia’s Bestselling Author</em>,
             eds. Stephen Norris and Elena Baraban (University of Toronto Press), 255–81.</p>
@@ -299,7 +301,7 @@
             2020
           </td>
           <td>
-            <p>“<a href="https://www.academia.edu/65812258/_The_Bestseller_or_The_Cultural_Logic_of_Postsocialism_Slavic_Review_79_3_Fall_2020_613_635">
+            <p>“<a href="https://www.academia.edu/65812258/_The_Bestseller_or_The_Cultural_Logic_of_Postsocialism_Slavic_Review_79_3_Fall_2020_613_635" target="_blank">
               The Bestseller, or The Cultural Logic of Postsocialism</a>,”
             <em>Slavic Review</em>, Vol. 79, No. 3 (Fall): 613–635.</p>
           </td>
@@ -309,7 +311,7 @@
             2020
           </td>
           <td>
-            <p><a href="https://www.academia.edu/122129242/_%D0%A8%D0%B0%D1%80%D0%BE%D0%B2_%D0%B8_%D0%BF%D1%80%D0%B0%D0%B2%D0%B4%D0%B0_%D0%B8%D0%BB%D0%B8_%D0%BF%D1%83%D1%82%D1%8C_%D0%93%D0%BE%D0%B3%D0%BE%D0%BB%D1%8F_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%A8%D0%B0%D1%80%D0%BE%D0%B2_%D0%9F%D0%BE_%D1%82%D1%83_%D1%81%D1%82%D0%BE%D1%80%D0%BE%D0%BD%D1%83_%D0%B8%D1%81%D1%82%D0%BE%D1%80%D0%B8%D0%B8_%D0%BF%D0%BE%D0%B4_%D1%80%D0%B5%D0%B4_%D0%90%D0%BD%D0%B0%D1%81%D1%82%D0%B0%D1%81%D0%B8%D0%B8_%D0%B4%D0%B5_%D0%BB%D1%8F_%D0%A4%D0%BE%D1%80%D1%82%D0%B5%D0%BB%D1%8C_%D0%B8_%D0%9C%D0%B0%D1%80%D0%BA%D0%B0_%D0%9B%D0%B8%D0%BF%D0%BE%D0%B2%D0%B5%D1%86%D0%BA%D0%BE%D0%B3%D0%BE_%D0%9D%D0%BE%D0%B2%D0%BE%D0%B5_%D0%BB%D0%B8%D1%82%D0%B5%D1%80%D0%B0%D1%82%D1%83%D1%80%D0%BD%D0%BE%D0%B5_%D0%BE%D0%B1%D0%BE%D0%B7%D1%80%D0%B5%D0%BD%D0%B8%D0%B5_501_532">
+            <p><a href="https://www.academia.edu/122129242/_%D0%A8%D0%B0%D1%80%D0%BE%D0%B2_%D0%B8_%D0%BF%D1%80%D0%B0%D0%B2%D0%B4%D0%B0_%D0%B8%D0%BB%D0%B8_%D0%BF%D1%83%D1%82%D1%8C_%D0%93%D0%BE%D0%B3%D0%BE%D0%BB%D1%8F_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%A8%D0%B0%D1%80%D0%BE%D0%B2_%D0%9F%D0%BE_%D1%82%D1%83_%D1%81%D1%82%D0%BE%D1%80%D0%BE%D0%BD%D1%83_%D0%B8%D1%81%D1%82%D0%BE%D1%80%D0%B8%D0%B8_%D0%BF%D0%BE%D0%B4_%D1%80%D0%B5%D0%B4_%D0%90%D0%BD%D0%B0%D1%81%D1%82%D0%B0%D1%81%D0%B8%D0%B8_%D0%B4%D0%B5_%D0%BB%D1%8F_%D0%A4%D0%BE%D1%80%D1%82%D0%B5%D0%BB%D1%8C_%D0%B8_%D0%9C%D0%B0%D1%80%D0%BA%D0%B0_%D0%9B%D0%B8%D0%BF%D0%BE%D0%B2%D0%B5%D1%86%D0%BA%D0%BE%D0%B3%D0%BE_%D0%9D%D0%BE%D0%B2%D0%BE%D0%B5_%D0%BB%D0%B8%D1%82%D0%B5%D1%80%D0%B0%D1%82%D1%83%D1%80%D0%BD%D0%BE%D0%B5_%D0%BE%D0%B1%D0%BE%D0%B7%D1%80%D0%B5%D0%BD%D0%B8%D0%B5_501_532" target="_blank">
               “Шаров и правда; или, путь Гоголя</a>,” Владимир Шаров: По ту сторону истории,
             под ред. Анастасии де ля Фортель и Марка Липовецкого (Новое литературное обозрение),
             501–532. [“Sharov and Truth; or, Gogol’s Way,” Vladimir Sharov: Beyond History,
@@ -322,7 +324,7 @@
             2019
           </td>
           <td>
-            <p>“<a href="https://www.academia.edu/44191471/_The_Battle_for_Pre_Modernity_Medieval_Festivals_in_Contemporary_Russia_The_Russian_Review_Vol_78_No_4_2019_547_68">
+            <p>“<a href="https://www.academia.edu/44191471/_The_Battle_for_Pre_Modernity_Medieval_Festivals_in_Contemporary_Russia_The_Russian_Review_Vol_78_No_4_2019_547_68" target="_blank">
               The Battle for (Pre-)Modernity: Medieval Festivals in Contemporary Russia</a>,”
             <em>The Russian Review</em>, Vol. 78, No. 4 (October): 547–68.</p>
             <ul>
@@ -339,7 +341,7 @@
             2018
           </td>
           <td>
-            <p>“<a href="https://www.academia.edu/37034976/_Enchanted_Geographies_Aleksei_Ivanov_and_the_Aesthetic_Management_of_Ural_Regional_Identity_Russias_Regional_Identities_The_Power_of_the_Provinces_eds_Edith_W_Clowes_Gisela_Erbsl%C3%B6h_Ani_Kokobobo_Routledge_2018_160_85">
+            <p>“<a href="https://www.academia.edu/37034976/_Enchanted_Geographies_Aleksei_Ivanov_and_the_Aesthetic_Management_of_Ural_Regional_Identity_Russias_Regional_Identities_The_Power_of_the_Provinces_eds_Edith_W_Clowes_Gisela_Erbsl%C3%B6h_Ani_Kokobobo_Routledge_2018_160_85" target="_blank">
               Enchanted Geographies: Aleksei Ivanov and the Aesthetic Management of Ural Identity</a>,”
             in <em>Russia’s Regional Identities</em>, eds. Edith W. Clowes, Gisela
             Erbslöh, Ani Kokobobo (Routledge), 160–85.</p>
@@ -350,7 +352,7 @@
             2018
           </td>
           <td>
-            <p>“<a href="https://www.academia.edu/37004146/_Manufacturing_Dissent_Stiliagi_Vasilii_Aksenov_and_the_Dilemma_of_Self_Interpretation_Russian_Literature_96_98_2018_77_104">
+            <p>“<a href="https://www.academia.edu/37004146/_Manufacturing_Dissent_Stiliagi_Vasilii_Aksenov_and_the_Dilemma_of_Self_Interpretation_Russian_Literature_96_98_2018_77_104" target="_blank">
               Manufacturing Dissent: Vassily Aksyonov, <em>Stiliagi</em>, and the Dilemma of Self-Interpretation</a>,"
             <em>Russian Literature</em>, Special issue on "Cultures of (Non-)Conformity: From Late Soviet Times to the Present," Vol. 96–98,
             (May): 77–104.</p>
